add more testcases to specjbb